stable first playbook

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,7 +8,8 @@
 # finds first
 
 [defaults]
-
+vault_password_file = ./privatekey/.vault_pass
+interpreter_python = auto_legacy_silent
 # some basic default values...
 
 #inventory      = /etc/ansible/hosts
