--- a/playbook-firstinstall.yml
+++ b/playbook-firstinstall.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: firstinstall
+- hosts: assimilate
   vars:
   - ansible_ssh_user: "{{ ssh_user }}"
   - ansible_ssh_pass: "{{ ssh_pass }}"
