--- a/playbook-testing.yml
+++ b/playbook-testing.yml
@@ -1,14 +1,18 @@
 ---
-- hosts: testhosts
+- hosts: testing
+#  strategy: free #allows paralel run of hosts and/or roles
+  vars_files:
+    - secret
   vars:
-  - ansible_become_pass: "{{ sudo_pass }}"
-  vars_prompt:
-    - name: "sudo_pass"
-      prompt: "Give sudo password"
-      private: yes
+  - ansible_become_pass: "{{ ansible_sudo_pass }}"
+#  - ansible_become_pass: "{{ sudo_pass }}"
+#  vars_prompt:
+#    - name: "sudo_pass"
+#      prompt: "Give sudo password"
+#      private: yes
   gather_facts: true
   become: yes
   become_user: root
   become_method: su
   roles:
-    - docker
+    - resilio-sync
