--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -4,16 +4,16 @@
     dest: /etc/ssh/sshd_config
     owner: root
     group: root
-    mode: '0600'
+    mode: '0644'
     validate: /usr/sbin/sshd -t -f %s
     backup: yes
   notify:
-    - restart ssh
-  tags: ssh
+    - restart sshd
+  tags: sshd
 
 - name: Get running and enabled
   service:
-    name: ssh
+    name: sshd
     state: started
     enabled: yes
-  tags: ssh
+  tags: sshd
