--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -17,16 +17,10 @@
     state: started
     enabled: yes
   tags: sshd
-    mode: '0600'
-    validate: /usr/sbin/sshd -t -f %s
-    backup: yes
-  notify:
-    - restart ssh
-  tags: ssh
 
 - name: Get running and enabled
   service:
     name: ssh
     state: started
     enabled: yes
-  tags: ssh
+  tags: sshd
